clusters/app.ci/ci-operator-configresolver/ci-operator-configresolver.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    namespace: ci
    labels:
      app: prow
      component: ci-operator-configresolver
    name: ci-operator-configresolver
  spec:
    ports:
    - name: main
      port: 80
      protocol: TCP
      targetPort: main
    - name: ui
      port: 8082
      protocol: TCP
      targetPort: ui
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: metrics
    selector:
      app: prow
      component: ci-operator-configresolver
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: prow
      component: ci-operator-configresolver
    name: ci-operator-configresolver-ui
    namespace: ci
  spec:
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    port:
      targetPort: ui
    to:
      kind: Service
      name: ci-operator-configresolver
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: prow
      component: ci-operator-configresolver
    name: ci-operator-configresolver
    namespace: ci
  spec:
    port:
      targetPort: main
    to:
      kind: Service
      name: ci-operator-configresolver
- apiVersion: monitoring.coreos.com/v1
  kind: ServiceMonitor
  metadata:
    name: ci-operator-configresolver
    namespace: prow-monitoring
    labels:
      app: prow
      component: ci-operator-configresolver
      prow-app: ci-operator-configresolver
  spec:
    endpoints:
    - interval: 30s
      port: metrics
      scheme: http
    namespaceSelector:
      matchNames:
      - ci
    selector:
      matchLabels:
        app: prow
        component: ci-operator-configresolver
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    namespace: ci
    name: ci-operator-configresolver
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"ci-operator-configresolver:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ci-operator-configresolver\")].image"}]'
  spec:
    replicas: 0
    strategy:
      type: RollingUpdate
    selector:
      matchLabels:
        app: prow
        component: ci-operator-configresolver
    template:
      metadata:
        labels:
          app: prow
          component: ci-operator-configresolver
      spec:
        affinity:
          podAntiAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                  - key: component
                    operator: In
                    values:
                    - ci-operator-configresolver
                topologyKey: "kubernetes.io/hostname"
        containers:
        - name: git-sync
          command:
          - /git-sync
          args:
          - --repo=https://github.com/theokdexperience/release.git
          - --branch=master
          - --wait=30
          - --root=/tmp/git-sync
          image: gcr.io/google_containers/git-sync:v3.1.6
          volumeMounts:
          - name: release
            mountPath: /tmp/git-sync
        - name: ci-operator-configresolver
          image: ci-operator-configresolver:latest
          args:
          - -release-repo-git-sync-path=/var/repo/release
          - -log-level=debug
          ports:
          - name: main
            containerPort: 8080
          - name: ui
            containerPort: 8082
          - name: metrics
            containerPort: 9090
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 3
            timeoutSeconds: 600
          volumeMounts:
          - name: release
            mountPath: /var/repo
            readOnly: true
          resources:
            requests:
              memory: "2Gi"
              cpu: "200m"
        volumes:
        - name: release
          emptyDir: {}
